# Password-Manager

./: Cargo.toml  passwords.json
src/: encryption.rs  json.rs  main.rs  models.rs  scraps  viewers.rs
