[package]
name = "password_manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes = "0.8.4"
typenum = "1.17.0"
serde_json = "=1.0.1"
serde = { version = "1.0.199", features = ["derive"] }
clap = { version = "3.0.0-beta.5", features = ["cargo"] }
